--- a/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
+++ b/src/main/resources/fxml/actionWizard/RomActionWizard.fxml
@@ -19,16 +19,9 @@
         <Label layoutX="23.0" layoutY="14.0" text="Select Mode" />
             <Pane layoutX="23.0" layoutY="67.0" prefHeight="141.0" prefWidth="309.0" styleClass="borderBox">
                 <children>
-                    <Label layoutX="14.0" layoutY="14.0" text="Cover Art Actions" />
+                    <Label styleClass="title" layoutX="14.0" layoutY="14.0" text="Cover Art Actions" />
                     <RadioButton fx:id="localImageSelect" layoutX="26.0" layoutY="60.0" mnemonicParsing="false" text="Local Image Select"/>
                     <RadioButton fx:id="onlineImageSearch" layoutX="26.0" layoutY="93.0" mnemonicParsing="false" text="Online Image Search"  />
-                </children>
-            </Pane>
-            <Pane layoutX="23.0" layoutY="224.0" prefHeight="141.0" prefWidth="309.0" styleClass="borderBox">
-                <children>
-                    <Label layoutX="14.0" layoutY="14.0" text="Other Actions" />
-                    <RadioButton fx:id="localRomPatcher" layoutX="26.0" layoutY="60.0" mnemonicParsing="false" text="Local Rom Patcher"  />
-                    <RadioButton fx:id="onlineRomPatcher" layoutX="26.0" layoutY="93.0" mnemonicParsing="false" text="Online Rom Patcher"  />
                 </children>
             </Pane>
         </AnchorPane>
