--- a/src/main/resources/fxml/actionWizard/SearchProviderPanel.fxml
+++ b/src/main/resources/fxml/actionWizard/SearchProviderPanel.fxml
@@ -6,19 +6,19 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="700.0" styleClass="defaultContainer" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.SearchProviderPanelController">
+<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="700.0" styleClass="defaultContainer" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.SearchProviderPanelController">
    <AnchorPane layoutX="28.0" layoutY="35.0" prefHeight="395.0" prefWidth="300.0" styleClass="borderBox" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="35.0" AnchorPane.topAnchor="35.0">
       <children>
-          <TextField fx:id="gameName" alignment="CENTER" layoutX="10.0" layoutY="125.0" prefHeight="35.0" prefWidth="280.0" promptText="Search Query..." AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
-          <ChoiceBox fx:id="choiceBox" layoutX="14.0" layoutY="210.0" prefHeight="39.0" prefWidth="280.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0">
+         <TextField fx:id="gameName" alignment="CENTER" layoutX="8.0" layoutY="133.0" prefHeight="35.0" prefWidth="280.0" promptText="Search Query..." AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
+         <CheckBox fx:id="renameRom" layoutX="8.0" layoutY="174.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="280.0" text="Rename rom with Search Query" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
+         <ChoiceBox fx:id="choiceBox" layoutX="8.0" layoutY="198.0" prefHeight="39.0" prefWidth="280.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0">
     </ChoiceBox>
-         <CheckBox fx:id="renameRom" layoutX="16.0" layoutY="175.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="280.0" text="Rename rom with Search Query" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
       </children>
    </AnchorPane>
    <AnchorPane fx:id="rightPanel" layoutX="363.0" layoutY="35.0" prefHeight="395.0" prefWidth="300.0" styleClass="borderBox" AnchorPane.bottomAnchor="50.0" AnchorPane.rightAnchor="42.0" AnchorPane.topAnchor="35.0">
       <children>
-            <Label fx:id="name" layoutX="20.0" layoutY="23.0" maxWidth="${rightPanel.width - 16}" text="Choose a provider" wrapText="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="25.0" />
-            <Label fx:id="description" layoutX="20.0" layoutY="60.0" maxWidth="${rightPanel.width - 16}"  text="Use the dropdown box in the other panel to start a search" styleClass="descriptionLabel" wrapText="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="75.0" />
+            <Label fx:id="name" layoutX="20.0" layoutY="23.0" maxWidth="${rightPanel.width - 16}" styleClass="title" text="Choose a provider" wrapText="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="25.0" />
+            <Label fx:id="description" layoutX="20.0" layoutY="60.0" maxWidth="${rightPanel.width - 16}" styleClass="descriptionLabel" text="Use the dropdown box in the other panel to start a search" wrapText="true" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="75.0" />
       </children>
    </AnchorPane>
 </AnchorPane>
