--- a/src/main/resources/fxml/actionWizard/SelectLocalImagePanel.fxml
+++ b/src/main/resources/fxml/actionWizard/SelectLocalImagePanel.fxml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="700.0" styleClass="defaultContainer" stylesheets="@/styles/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.SelectLocalImagePanelController">
+<AnchorPane fx:id="wizardPane" prefHeight="480.0" prefWidth="700.0" styleClass="defaultContainer" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="manager.controllers.actionWizard.SelectLocalImagePanelController">
    <children>
-      <AnchorPane fx:id="dragPane" prefHeight="${wizardPane.height - 160}" prefWidth="${wizardPane.width - 42}" styleClass="borderBoxDotted"  AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="36.0">
+      <AnchorPane fx:id="dragPane" prefHeight="${wizardPane.height - 160}" prefWidth="${wizardPane.width - 42}" styleClass="borderBoxDotted" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="36.0">
          <children>
-            <StackPane layoutX="0" layoutY="0" prefWidth="${dragPane.width}" prefHeight="${dragPane.height}">
+            <StackPane layoutX="0" layoutY="0" prefHeight="${dragPane.height}" prefWidth="${dragPane.width}">
                <VBox alignment="CENTER">
                   <FontIcon fx:id="fontIcon" iconLiteral="far-file-image" styleClass="fontIcon" />
-                  <Label fx:id="dragBoxLabel" text="Drag and drop here"  />
+                  <Label fx:id="dragBoxLabel" styleClass="title" text="Drag and drop here">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin></Label>
                </VBox>
             </StackPane>
-            <StackPane layoutX="0" layoutY="0" prefWidth="${dragPane.width}" prefHeight="${dragPane.height}">
-               <ImageView fx:id="imagePreview" layoutX="20.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true" fitWidth="${wizardPane.width - 60}" fitHeight="${wizardPane.height - 200}"/>
+            <StackPane layoutX="0" layoutY="0" prefHeight="${dragPane.height}" prefWidth="${dragPane.width}">
+               <ImageView fx:id="imagePreview" fitHeight="${wizardPane.height - 200}" fitWidth="${wizardPane.width - 60}" layoutX="20.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true" />
             </StackPane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="fileSelectPane" layoutX="36.0" layoutY="356.0" prefHeight="64.0" prefWidth="${wizardPane.width - 35}" styleClass="borderBox"  AnchorPane.leftAnchor="20.0" AnchorPane.bottomAnchor="44.0">
+      <AnchorPane fx:id="fileSelectPane" layoutX="36.0" layoutY="356.0" prefHeight="64.0" prefWidth="${wizardPane.width - 35}" styleClass="borderBox" AnchorPane.bottomAnchor="44.0" AnchorPane.leftAnchor="20.0">
          <children>
             <Button fx:id="fileSelectButton" layoutX="14.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#handleFileSelect" text="Load Image" AnchorPane.leftAnchor="14.0" />
-            <Label fx:id="filenameLabel" layoutX="134.0" layoutY="18.0" text="Filename" AnchorPane.leftAnchor="134.0" />
+            <Label fx:id="filenameLabel" layoutX="134.0" layoutY="18.0" styleClass="title" text="Filename" AnchorPane.leftAnchor="134.0" />
          </children>
       </AnchorPane>
    </children>
