--- a/src/main/resources/fxml/OptionsWindow.fxml
+++ b/src/main/resources/fxml/OptionsWindow.fxml
@@ -17,18 +17,18 @@
                <content>
                   <AnchorPane>
                      <children>
-                        <ComboBox fx:id="deviceProfileComboBox" layoutX="201.0" layoutY="45.0" prefWidth="150.0" />
-                        <Label layoutX="18.0" layoutY="49.0" text="Device Profile" />
-                        <Label layoutX="14.0" layoutY="78.0" />
-                        <TextField fx:id="manualScaleSizeTextField" layoutX="201.0" layoutY="79.0" prefHeight="23.0" prefWidth="151.0" />
-                        <Label layoutX="26.0" layoutY="83.0" text="Manual Scale Size" />
-                        <CheckBox fx:id="manualScaleEnableCheckBox" contentDisplay="RIGHT" layoutX="295.0" layoutY="110.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enable" />
-                        <TextField fx:id="deviceDirectoryTextField" layoutX="202.0" layoutY="147.0" prefHeight="25.0" prefWidth="88.0" />
-                        <Label layoutX="22.0" layoutY="152.0" text="Device Directory" />
-                        <Button fx:id="changeDirectoryButton" layoutX="295.0" layoutY="144.0" mnemonicParsing="false" text="Change" />
-                        <ComboBox fx:id="languageComboBox" layoutX="202.0" layoutY="188.0" prefWidth="150.0" />
-                        <Label layoutX="22.0" layoutY="192.0" text="Language" />
-                     </children></AnchorPane>
+                           <ComboBox fx:id="deviceProfileComboBox" layoutX="201.0" layoutY="45.0" prefWidth="150.0" />
+                           <Label fx:id="deviceProfileLabel" layoutX="25.0" layoutY="49.0" text="Device Profile" />
+                           <TextField fx:id="manualScaleSizeTextField" layoutX="201.0" layoutY="79.0" prefHeight="23.0" prefWidth="151.0" />
+                           <Label fx:id="manualScaleSizeLabel" layoutX="25.0" layoutY="83.0" text="Manual Scale Size" />
+                           <CheckBox fx:id="manualScaleEnableCheckBox" layoutX="202.0" layoutY="110.0" mnemonicParsing="false" styleClass="apiCheckbox" />
+                           <TextField fx:id="deviceDirectoryTextField" layoutX="202.0" layoutY="147.0" prefHeight="25.0" prefWidth="88.0" />
+                           <Label fx:id="deviceDirectoryLabel" layoutX="25.0" layoutY="152.0" text="Device Directory" />
+                           <Button fx:id="changeDirectoryButton" layoutX="295.0" layoutY="144.0" mnemonicParsing="false" text="Change" />
+                           <ComboBox fx:id="languageComboBox" layoutX="202.0" layoutY="188.0" prefWidth="150.0" />
+                           <Label fx:id="languageLabel" layoutX="25.0" layoutY="192.0" text="Language" />
+                     </children>
+                  </AnchorPane>
                </content>
             </Tab>
             <Tab text="API Keys">
@@ -36,12 +36,12 @@
                   <AnchorPane>
                      <children>
                         <TextField fx:id="steamGridDBApiKeyTextField" layoutX="14.0" layoutY="47.0" prefHeight="23.0" prefWidth="342.0" promptText="API Key" />
-                        <Label layoutX="14.0" layoutY="22.0" text="SteamGridDB" />
+                        <Label fx:id="steamGridDBLabel" layoutX="14.0" layoutY="22.0" />
                         <TextField fx:id="igdbSecretTextField" layoutX="14.0" layoutY="155.0" prefHeight="23.0" prefWidth="342.0" promptText="Secret" />
-                        <Label layoutX="14.0" layoutY="99.0" text="IGDB" />
+                        <Label fx:id="igdbLabel" layoutX="14.0" layoutY="99.0" />
                         <TextField fx:id="igdbClientIdTextField" layoutX="14.0" layoutY="124.0" prefHeight="23.0" prefWidth="342.0" promptText="Client ID" />
-                        <CheckBox fx:id="steamGridDBEnabledCheckBox" contentDisplay="RIGHT" layoutX="286.0" layoutY="76.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enabled" />
-                        <CheckBox fx:id="igdbEnabledCheckBox" contentDisplay="RIGHT" layoutX="286.0" layoutY="188.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enabled" />
+                        <CheckBox fx:id="steamGridDBEnabledCheckBox" contentDisplay="RIGHT" layoutX="14.0" layoutY="76.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enabled" />
+                        <CheckBox fx:id="igdbEnabledCheckBox" contentDisplay="RIGHT" layoutX="14.0" layoutY="188.0" mnemonicParsing="false" styleClass="apiCheckbox" text="Enabled" />
                      </children></AnchorPane>
                </content>
             </Tab>
