--- a/src/main/resources/styles/style.css
+++ b/src/main/resources/styles/style.css
@@ -403,3 +403,11 @@ Combo Boxes
 .scroll-bar:vertical .thumb:focused {
     -fx-background-color: linear-gradient(from 0px 0px to 0px 100%, rgb(102, 133, 197) 44%, rgb(45, 92, 169) 72%, rgb(0, 31, 133) 86%);
 }
+
+.checkbox-label {
+    -fx-padding: 0 0 0 5; /* Add left padding to the label */
+}
+
+.apiCheckbox {
+    -fx-alignment: center-right; /* Align the checkbox to the right */
+}
